tests/compile_fail/conflicting_inverse.stderr
error: `no_short and no_long` and `inverse_arg` are conflicting attributes, they cannot go together in the same field.
 --> $DIR/conflicting_inverse.rs:9:9
  |
9 |     pub value: bool,
  |         ^^^^^
